--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.mixpanel.android:mixpanel-android:4.6.4'
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+//    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.android.gms:play-services-base:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.braintreepayments.api:braintree:2.1.2'
+    compile 'com.braintreepayments.api:drop-in:2.1.2'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
